refactor: 로드맵 단일 조회에 content와 node id 반환 추가